Adding new account function added
